# CryptixOS

./: .bochsrc  .dockerignore  .gitignore  .gitmodules  :  Dockerfile  LICENSE  Makefile  Prism  README.md  RedBlackTree.hpp  bootstrap.yml  build.sh  compile_commands.json  cppcheck_report.txt  create_image.sh  fmt-10.2.0.patch  generate_symbols.sh  limine.conf  meson.build  setup.sh  typos.toml
Kernel/: Assertions.hpp  Common.hpp  Compiler.hpp  Config.hpp  Config.hpp.in  KernelStart.cpp  Panic.cpp  Version.hpp.in  linker.aarch64.ld  linker.x86_64.ld  meson.build
Kernel/ACPI/: ACPI.cpp  ACPI.hpp  MADT.cpp  MADT.hpp  UACPI.cpp
Kernel/API/: DeviceIDs.hpp  Limits.hpp  MM.cpp  MM.hpp  Process.cpp  Process.hpp  Syscall.cpp  Syscall.hpp  SyscallEntryPoints.cpp  SyscallEntryPoints.hpp  System.cpp  System.hpp  Time.cpp  Time.hpp  UnixTypes.hpp  VFS.cpp  VFS.hpp  meson.build
Kernel/API/Posix/: Termios.hpp  dirent.h  fcntl.h  signal.h  termios.h  time.h  unistd.h  utime.h
Kernel/Arch/: Arch.hpp  CPU.hpp  InterruptGuard.hpp  InterruptHandler.hpp  InterruptManager.hpp  PowerManager.cpp  PowerManager.hpp  User.cpp  User.hpp  meson.build
Kernel/Arch/aarch64/: Arch.cpp  CPU.cpp  CPU.hpp  CPUContext.hpp  InterruptManager.cpp  Syscall.cpp  VMM.cpp  interrupts.S  memory.S  meson.build
Kernel/Arch/x86_64/: Arch.cpp  Atomic.hpp  CMOS.cpp  CMOS.hpp  CPU.cpp  CPU.hpp  CPUContext.hpp  CPUID.hpp  CPUIntrinsics.hpp  GDT.cpp  GDT.hpp  IDT.cpp  IDT.hpp  IO.hpp  InterruptManager.cpp  Random.hpp  Syscall.cpp  Types.hpp  VMM.cpp  common.inc  idt.S  interrupts.x86_64.S  memory.S  meson.build  syscall.S
Kernel/Boot/: BootInfo.cpp  BootInfo.hpp  BootMemoryInfo.hpp  BootModuleInfo.hpp  CommandLine.cpp  CommandLine.hpp  meson.build
Kernel/Debug/: Assertions.hpp  Config.hpp  Debug.hpp.in  Kasan.cpp  Panic.cpp  Panic.hpp  meson.build
Kernel/Drivers/: CharacterDevice.cpp  CharacterDevice.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  FilesystemDriver.hpp  FramebufferDevice.cpp  FramebufferDevice.hpp  FullDevice.hpp  GenericDriver.cpp  GenericDriver.hpp  InterruptController.hpp  MemoryDevices.hpp  NullDevice.hpp  Serial.hpp  TTY.cpp  TTY.hpp  Terminal.cpp  Terminal.hpp  VideoTerminal.cpp  VideoTerminal.hpp  ZeroDevice.hpp  meson.build
Kernel/Drivers/ACPI/: Bus.cpp  Bus.hpp  Driver.hpp  meson.build
Kernel/Drivers/Core/: BlockDevice.hpp  CharacterDevice.cpp  CharacterDevice.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  FilesystemDriver.hpp  GenericDriver.cpp  MemoryDevices.hpp  meson.build
Kernel/Drivers/HID/: PS2Scancodes.hpp  Ps2Controller.hpp  Ps2KeyboardDevice.cpp  Ps2KeyboardDevice.hpp  meson.build
Kernel/Drivers/Input/: Input.cpp  Input.hpp  Keyboard.hpp  meson.build
Kernel/Drivers/PCI/: Access.cpp  Access.hpp  Bus.cpp  Bus.hpp  Definitions.hpp  Device.cpp  Device.hpp  HostController.cpp  HostController.hpp  MSI.hpp  PCI.cpp  PCI.hpp  meson.build
Kernel/Drivers/Storage/: GPT.hpp  MasterBootRecord.hpp  PartitionTable.cpp  PartitionTable.hpp  StorageDevice.cpp  StorageDevice.hpp  StorageDevicePartition.cpp  StorageDevicePartition.hpp  meson.build
Kernel/Drivers/USB/: HostController.hpp  USB.cpp  USB.hpp  meson.build
Kernel/Drivers/Video/: EDID.hpp  Framebuffer.hpp  FramebufferDevice.cpp  FramebufferDevice.hpp  VideoTerminal.cpp  VideoTerminal.hpp  meson.build
Kernel/Drivers/Virtio/: VirtioDevice.cpp  VirtioDevice.hpp  VirtioQueue.cpp  VirtioQueue.hpp
Kernel/Embed/: Font.hpp
Kernel/Firmware/: meson.build
Kernel/Firmware/ACPI/: ACPI.cpp  ACPI.hpp  HPET.hpp  MADT.cpp  MADT.hpp  MCFG.hpp  SRAT.hpp  Structures.hpp  UACPI.cpp  meson.build
Kernel/Firmware/DMI/: SMBIOS.cpp  SMBIOS.hpp  Tables.hpp  meson.build
Kernel/Firmware/DeviceTree/: DeviceTree.cpp  DeviceTree.hpp  Node.cpp  Node.hpp  meson.build
Kernel/Firmware/EFI/: Initialize.cpp  Memory.hpp  RuntimeServices.hpp  SystemTable.hpp  Types.hpp  meson.build
Kernel/Firmware/SMBIOS/: SMBIOS.cpp  SMBIOS.hpp  Tables.hpp
Kernel/Memory/: AddressRange.hpp  AddressSpace.cpp  AddressSpace.hpp  IORegion.hpp  KernelHeap.cpp  KernelHeap.hpp  MM.cpp  MM.hpp  MMIO.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryZone.hpp  PMM.cpp  PMM.hpp  PageFault.hpp  PageMap.cpp  PageMap.hpp  PageTableEntry.hpp  Region.cpp  Region.hpp  ScopedMapping.cpp  ScopedMapping.hpp  SlabAllocator.hpp  VMM.cpp  VMM.hpp  meson.build
Kernel/Memory/Allocator/: BitmapAllocator.cpp  BitmapAllocator.hpp  BuddyAllocator.cpp  BuddyAllocator.hpp  KernelHeap.cpp  KernelHeap.hpp  PageFrameAllocator.hpp  SlabAllocator.hpp  SlabPool.hpp  meson.build
Kernel/Memory/Allocators/: BitmapAllocator.cpp  BitmapAllocator.hpp  PageFrameAllocator.hpp
Kernel/Network/: IPv4Socket.cpp  IPv4Socket.hpp  MacAddress.hpp  NetworkAdapter.cpp  NetworkAdapter.hpp  Socket.cpp  Socket.hpp
Kernel/Scheduler/: Event.cpp  Event.hpp  Process.cpp  Process.hpp  Scheduler.cpp  Scheduler.hpp  Spinlock.hpp  Thread.cpp  Thread.hpp  ThreadEvent.hpp  meson.build
Kernel/System/: Limits.hpp  System.cpp  System.hpp  meson.build
Kernel/Time/: ClockSource.hpp  HardwareTimer.hpp  Time.cpp  Time.hpp  TimeStep.hpp  meson.build
Kernel/Utility/: Bitmap.hpp  BootInfo.cpp  BootInfo.hpp  ELF.cpp  ELF.hpp  ICxxAbi.hpp  Kasan.cpp  Logger.cpp  Logger.hpp  Math.hpp  NonCopyable.hpp  Path.cpp  Path.hpp  PathView.cpp  PathView.hpp  Pointer.hpp  RedBlackTree.hpp  Spinlock.hpp  Stacktrace.cpp  Stacktrace.hpp  Types.hpp  UUID.hpp  Ubsan.cpp
Kernel/Utility/KLibC++/: cstdlib  functional  icxxabi.cpp  (+4 more)
Kernel/VFS/: DirectoryEntry.cpp  DirectoryEntry.hpp  Fifo.cpp  Fifo.hpp  File.cpp  File.hpp  FileDescriptor.cpp  FileDescriptor.hpp  FileDescriptorTable.cpp  FileDescriptorTable.hpp  FileHandle.hpp  Filesystem.hpp  INode.cpp  INode.hpp  MountPoint.cpp  MountPoint.hpp  PathResolver.cpp  PathResolver.hpp  PathWalker.cpp  PathWalker.hpp  SequenceFile.hpp  SynthFsINode.cpp  SynthFsINode.hpp  VFS.cpp  VFS.hpp  VNode.cpp  meson.build
Modules/: linker.aarch64.ld  linker.x86_64.ld  meson.build
Modules/aarch64/: meson.build
Modules/noarch/: meson.build
Modules/x86_64/: meson.build
(+258 files in other folders)
