#*
#* Created by v1tr10l7 on 15.07.2025.
#* Copyright (c) 2024-2025, Szymon Zemke <v1tr10l7@proton.me>
#*
#* SPDX-License-Identifier: GPL-3
#*/
srcs += files(
  'CharacterDevice.cpp',
  'Device.cpp',
  'DeviceManager.cpp',
  'FramebufferDevice.cpp',
  'GenericDriver.cpp',
  'TTY.cpp',
  'Terminal.cpp',
  'VideoTerminal.cpp',
)

subdir('HID')
subdir('PCI')
subdir('Storage')
subdir('USB')
