#*
#* Created by v1tr10l7 on 15.07.2025.
#* Copyright (c) 2024-2025, Szymon Zemke <v1tr10l7@proton.me>
#*
#* SPDX-License-Identifier: GPL-3
#*/
srcs += files(
  'DirectoryEntry.cpp',
  'Fifo.cpp',
  'File.cpp',
  'FileDescriptor.cpp',
  'FileDescriptorTable.cpp',
  'INode.cpp',
  'MountPoint.cpp',
  'PathResolver.cpp',
  'VFS.cpp',
)

subdir('DevTmpFs')
subdir('EchFs')
subdir('Ext2Fs')
subdir('Fat32Fs')
subdir('Initrd')
subdir('ProcFs')
subdir('TmpFs')
